Added full menu to customer page

--- a/index.html
+++ b/index.html
@@ -17,23 +17,62 @@
       <h2>☕ Coffee & Beverages</h2>
       <label><input type="checkbox" name="items" value="Hot/Iced Chocolate - 26" data-price="26"> Hot/Iced Chocolate - 26 AED</label><br>
       <label><input type="checkbox" name="items" value="Mocha Latte - 25" data-price="25"> Mocha Latte - 25 AED</label><br>
-      <!-- Add more items as before, make sure each has data-price -->
+      <label><input type="checkbox" name="items" value="Coffee Latte - 25" data-price="25"> Coffee Latte - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Cortado - 21" data-price="21"> Cortado - 21 AED</label><br>
+      <label><input type="checkbox" name="items" value="Espresso - 16" data-price="16"> Espresso - 16 AED</label><br>
+      <label><input type="checkbox" name="items" value="Hot/Iced Matcha Latte - 35" data-price="35"> Hot/Iced Matcha Latte - 35 AED</label><br>
+      <label><input type="checkbox" name="items" value="Spanish Latte - 24" data-price="24"> Spanish Latte - 24 AED</label><br>
+      <label><input type="checkbox" name="items" value="V60 - 30" data-price="30"> V60 - 30 AED</label><br>
+      <label><input type="checkbox" name="items" value="Cappuccino - 24" data-price="24"> Cappuccino - 24 AED</label><br>
+      <label><input type="checkbox" name="items" value="Piccolo - 19" data-price="19"> Piccolo - 19 AED</label><br>
+      <label><input type="checkbox" name="items" value="Flat White - 24" data-price="24"> Flat White - 24 AED</label><br>
+      <label><input type="checkbox" name="items" value="Affogato - 28" data-price="28"> Affogato - 28 AED</label><br>
+      <label><input type="checkbox" name="items" value="Freddo Espresso - 22" data-price="22"> Freddo Espresso - 22 AED</label><br>
+      <label><input type="checkbox" name="items" value="Iced Spanish Latte - 25" data-price="25"> Iced Spanish Latte - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Iced Vanilla Latte - 25" data-price="25"> Iced Vanilla Latte - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Iced Caramel Latte - 25" data-price="25"> Iced Caramel Latte - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Americano - 20" data-price="20"> Americano - 20 AED</label><br>
+      <label><input type="checkbox" name="items" value="Creamy Latte - 25" data-price="25"> Creamy Latte - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Nitrus Coffee - 25" data-price="25"> Nitrus Coffee - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Tonic Water - 10" data-price="10"> Tonic Water - 10 AED</label><br>
+      <label><input type="checkbox" name="items" value="Orange - 20" data-price="20"> Orange - 20 AED</label><br>
+      <label><input type="checkbox" name="items" value="Hot Caramel Latte - 24" data-price="24"> Hot Caramel Latte - 24 AED</label><br>
+      <label><input type="checkbox" name="items" value="Hot Vanilla Latte - 24" data-price="24"> Hot Vanilla Latte - 24 AED</label><br>
+      <label><input type="checkbox" name="items" value="Long Black - 22" data-price="22"> Long Black - 22 AED</label><br>
+      <label><input type="checkbox" name="items" value="Bacha Coffee - 20" data-price="20"> Bacha Coffee - 20 AED</label><br>
+      <label><input type="checkbox" name="items" value="Turkish Coffee - 20" data-price="20"> Turkish Coffee - 20 AED</label><br>
+      <label><input type="checkbox" name="items" value="Sparkling Water - 6" data-price="6"> Sparkling Water - 6 AED</label><br>
+      <label><input type="checkbox" name="items" value="Ginger Ale - 5" data-price="5"> Ginger Ale - 5 AED</label><br>
+      <label><input type="checkbox" name="items" value="Green Juice - 30" data-price="30"> Green Juice - 30 AED</label><br>
 
       <h2>🍰 Desserts</h2>
       <label><input type="checkbox" name="items" value="Frostie Ice Cream - 25" data-price="25"> Frostie Ice Cream - 25 AED</label><br>
-      <!-- Add more items as before -->
+      <label><input type="checkbox" name="items" value="Mango Ice Cream - 16" data-price="16"> Mango Ice Cream - 16 AED</label><br>
+      <label><input type="checkbox" name="items" value="Protein Balls - 20" data-price="20"> Protein Balls - 20 AED</label><br>
+      <label><input type="checkbox" name="items" value="Waffle with Ice Cream - 20" data-price="20"> Waffle with Ice Cream - 20 AED</label><br>
+      <label><input type="checkbox" name="items" value="Cookies - 10" data-price="10"> Cookies - 10 AED</label><br>
 
       <h2>🥪 Meals</h2>
       <label><input type="checkbox" name="items" value="Avocado Toast - 40" data-price="40"> Avocado Toast - 40 AED</label><br>
-      <!-- Add more items as before -->
+      <label><input type="checkbox" name="items" value="Four Cheese Toast - 35" data-price="35"> Four Cheese Toast - 35 AED</label><br>
+      <label><input type="checkbox" name="items" value="Acai Bowl - 40" data-price="40"> Acai Bowl - 40 AED</label><br>
+      <label><input type="checkbox" name="items" value="Chia Pudding - 25" data-price="25"> Chia Pudding - 25 AED</label><br>
+      <label><input type="checkbox" name="items" value="Wholesome Cup - 35" data-price="35"> Wholesome Cup - 35 AED</label><br>
+      <label><input type="checkbox" name="items" value="Croissant - 15" data-price="15"> Croissant - 15 AED</label><br>
 
       <h2>🍵 Tea</h2>
       <label><input type="checkbox" name="items" value="Flavoured Tea - 12" data-price="12"> Flavoured Tea - 12 AED</label><br>
-      <!-- Add more items as before -->
+      <label><input type="checkbox" name="items" value="Wellness Herbal Tea - 15" data-price="15"> Wellness Herbal Tea - 15 AED</label><br>
+      <label><input type="checkbox" name="items" value="Moroccan Tea - 15" data-price="15"> Moroccan Tea - 15 AED</label><br>
+      <label><input type="checkbox" name="items" value="Green / Camomile / English Tea - 12" data-price="12"> Green / Camomile / English Tea - 12 AED</label><br>
 
       <h2>🥤 Milkshakes / Protein</h2>
       <label><input type="checkbox" name="items" value="Pistachio - 40" data-price="40"> Pistachio - 40 AED</label><br>
-      <!-- Add more items as before -->
+      <label><input type="checkbox" name="items" value="Vanilla - 40" data-price="40"> Vanilla - 40 AED</label><br>
+      <label><input type="checkbox" name="items" value="Banana - 40" data-price="40"> Banana - 40 AED</label><br>
+      <label><input type="checkbox" name="items" value="Protein - 40" data-price="40"> Protein - 40 AED</label><br>
+      <label><input type="checkbox" name="items" value="Raspberry - 40" data-price="40"> Raspberry - 40 AED</label><br>
+      <label><input type="checkbox" name="items" value="Espresso Dates - 40" data-price="40"> Espresso Dates - 40 AED</label><br>
 
       <h2>📝 Special Request</h2>
       <textarea name="request" placeholder="e.g., Less sugar, extra hot..." style="width:100%;height:60px;"></textarea><br>
