Applied luxury style to style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>The Lounge by Suite 88</title>
-  <link rel="stylesheet" href="main-style.css">
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
   <div class="container">
